// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render with lightgrey default background color 1`] = `
<button
  className="btn"
  id="button-0"
  type="button"
>
  0
</button>
`;

exports[`Button component should render with name equal to + 1`] = `
<button
  className="btn"
  id="button-+"
  type="button"
>
  +
</button>
`;
